refactor: restructure code with layered architecture and fix navigation bug
- Refactor codebase into layered architecture (services, cli/menus)
- Move instance detection logic to services/instance-service.js
- Split UI into separate menu modules (main-menu, instance-list, instance-details)
- Fix critical navigation bug: remove dual-menu conflict in instance-list
  - Issue: mainArea.menu + footer.menu caused renderPage to return footer result
  - Solution: move 'Back' option into mainArea.menu, remove footer.menu
- Add safety guards: default llmStatus, sanitize session text
- Add comprehensive instance monitoring features:
  - Daemon status (PID, port, uptime, managed status)
  - LLM session detection (Claude, Gemini, OpenCode, Codex)
  - Tmux pane tracking
  - State file and work directory info

Thanks to Codex for identifying the root cause of the navigation issue.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "cli-menu-kit": "^1.0.0"
+    "cli-menu-kit": "file:../../cli-menu-kit"
   }
 }
