feat(cleanup): add safe cleanup tool with activity detection
- Created cleanup-service.js with intelligent process analysis:
  * isProcessSafeToKill() - Checks if process has recent tmux activity
  * analyzeCCBProcesses() - Categorizes processes as active/orphaned
  * analyzeAskdProcesses() - Categorizes askd daemons
  * killOrphanedCCBProcesses() - Only kills inactive processes
  * killOrphanedAskdProcesses() - Only kills inactive daemons

- Created ccb-cleanup-safe CLI tool:
  * Analyzes all CCB and askd processes
  * Shows which are active (WILL NOT KILL) vs orphaned (SAFE TO KILL)
  * Requires user confirmation before killing
  * Supports --dry-run to preview without killing
  * Supports --yes to skip confirmation
  * Supports --force for SIGKILL instead of SIGTERM

Safety features:
- Checks tmux pane activity (last 5 minutes)
- Never kills processes with active tmux panes
- Shows detailed reasons for each decision
- Dry-run mode for safe testing

Usage:
  ccb-cleanup-safe --dry-run  # Preview what would be killed
  ccb-cleanup-safe            # Interactive cleanup with confirmation
  ccb-cleanup-safe --yes      # Auto-confirm cleanup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Status monitor for Claude Code Bridge - Monitor all CCB instances and daemon health",
   "main": "lib/index.js",
   "bin": {
-    "ccb-status": "./bin/ccb-status.js"
+    "ccb-status": "./bin/ccb-status.js",
+    "ccb-cleanup-safe": "./bin/ccb-cleanup-safe.js"
   },
   "scripts": {
     "build": "echo 'No build needed for now'",
