refactor: complete architecture decoupling per Codex review
Completed all remaining tasks from Codex architecture review:

1. Migrate all menus to unified API
   - Updated 14 menu files to import from instance-query.js
   - Changed getCCBInstances() to getInstances()
   - No menus now bypass the unified API

2. Add ESLint import guards
   - Created .eslintrc.json with no-restricted-imports rules
   - Block direct imports of instance-service from menus
   - Block direct imports of instance-operations-helper filtering
   - Allow exceptions for utils/instance-query and services layer

3. Add contract tests
   - Created status-resolver.contract.test.js
   - 8 test cases covering all status determination rules
   - Validates resolver matches documented rule matrix
   - All tests passing ✓

4. Update package.json
   - Added npm test and npm run test:contract scripts

Architecture now fully decoupled:
- Single entry point: instance-query.js
- Pure status logic: status-resolver.js
- Atomic checks: instance-checks.js
- Enforced via ESLint rules
- Validated via contract tests

CRITICAL: All menus MUST import from instance-query.js
ESLint will prevent bypassing the unified API

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "build": "echo 'No build needed for now'",
+    "test": "node test/status-resolver.contract.test.js",
+    "test:contract": "node test/status-resolver.contract.test.js",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
